# content-extraction

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/core/: discovery.py  extractor.py  generator.py  indexer.py  scanner.py  structure_generator.py  visualizer.py
src/graph/: state.py  workflow.py
src/utils/: config.py  toc_definitions.py
tests/: test_graph_scan.py  test_manual_sitemap.py  test_scanner_module.py  test_sitemap.py
